syntax = "proto3";

import "protos/activity_id.proto";
import "protos/squad.proto";

package protos;

message Intent {
  message SquadDelta {
    Squad added = 1;
    Squad removed = 2;
  }

  ActivityID activity_id = 1;
  oneof type {
    SquadDelta upsert_squad = 2;
    int64 update_timestamp_seconds = 3;
    bool mark_finished = 4;
    string set_milestone = 5;
    bool generate_images = 6;
  }
}
